@startuml
class ObjetoTransportable {
- int peso
- int dimensiones
- String esFragil
+ int getPeso()
+ void setPeso(int)
+ int getDimensiones()
+ void setDimensiones(int)
+ String getEsFragil()
+ void setEsFragil(String)
}
class Main {
+ {static} void main(String[])
}
class Silla {
- int cantidadDePatas
}
class Televisor {
- String estaEmpaquetada
}


ObjetoTransportable <|-- Silla
ObjetoTransportable <|-- Televisor
@enduml